<resources>


    <string name="app_name">Project jubitor</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="jual_beli_motor_bekas">Jual Beli Motor Bekas</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="ingat_saya">Ingat Saya</string>
    <string name="namapengguna">Nama Pengguna</string>
    <string name="email">Email</string>
    <string name="katasandi">Kata Sandi</string>
    <string name="alamat">Alamat</string>
    <string name="lupakatasandi">Lupa kata Sandi</string>
    <string name="notelp">No.Telefon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottnav">BottnavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tokosaya">TokosayaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>