<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBDE">


    <ImageView
        android:id="@+id/Logo_Jubitor"
        android:layout_width="417dp"
        android:layout_height="262dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_jubitor_cut"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/namapengguna"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:hint="@string/namapengguna"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_Jubitor" />


    <EditText
        android:id="@+id/katasandi"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:hint="@string/katasandi"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/namapengguna" />

    <EditText
        android:id="@+id/alamat"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:hint="@string/alamat"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/alamat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/katasandi" />

    <Button
        android:id="@+id/daftar"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="100dp"
        android:text="@string/daftar"
        android:onClick="MethodMasuk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>