<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBDE">


    <ImageView
        android:id="@+id/Logo_Jubitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_jubitor_cut"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/email"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_Jubitor" />

    <EditText
        android:id="@+id/katasandi"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="46dp"
        android:backgroundTint="#000000"
        android:ems="10"
        android:hint="@string/katasandi"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/masuk"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="32dp"
        android:text="@string/masuk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/katasandi" />

    <TextView
        android:id="@+id/lupakatasandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="242dp"
        android:layout_marginEnd="42dp"
        android:text="@string/lupakatasandi"
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/katasandi" />


</androidx.constraintlayout.widget.ConstraintLayout>