<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebde"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/Logo_Jubitor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_jubitor_cut"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/Masuk"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/btn_corner_radius"
        android:text="@string/masuk"
        android:textSize="20sp"
        android:onClick="MethodMasuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo_Jubitor" />

    <Button
        android:id="@+id/Daftar"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="89dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/btn_corner_radius"
        android:text="@string/daftar"
        android:textSize="20sp"
        android:onClick="MethodDaftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Masuk" />

    <TextView
        android:id="@+id/jualbelimotorbekas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/shrikhand_regular"
        android:text="@string/jual_beli_motor_bekas"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>